--- a/style.css
+++ b/style.css
@@ -7,9 +7,9 @@ img {
 }
 
 
-body {font-family: Nunito;}
+body {font-family: "Nunito";}
 
-body {background-color: 237, 220, 210;
+body {background-color: #EDDCD2;
 }
 
 
