--- a/style.css
+++ b/style.css
@@ -1,10 +1,10 @@
 /*img rules */
 img {
-  width: 200px;
+  width: 300px;
 }
 
 .center-circle {
-  border-radius: 50%;
+  border-radius: 50%; 
   display: block;
   margin-left: auto;
   margin-right: auto;
@@ -12,22 +12,25 @@ img {
 }
 
 h1 {
-  font-size: 40px;
-  text-align: center;
+  font-size: 50px;
+  margin: 0;
 }
 
 h2 {
-  font-size: 33px;
-  text-align: center;
+  font-size: 30px;
+    margin: 0;
+
 }
 h3{
-  font-size: 26px;
-  text-align: center;
+  font-size: 20px;
+  margin: 0
 
 }
 h4{font-size: }
 p ul ol li a{
   font-size: 18px;
+    margin: 0;
+
 }
 
 
@@ -38,6 +41,7 @@ body {background-color: #EDDCD2;
 
 
  header, footer {
+   text-align: center;
    background: #CB997E;
 }  
 
