--- a/style.css
+++ b/style.css
@@ -2,39 +2,38 @@
 img {
   width: 300px;
 }
-
 .center-circle {
   border-radius: 50%; 
   display: block;
   margin-left: auto;
   margin-right: auto;
-  width: 50%;
+  width: 25%;
 }
 
 h1 {
   font-size: 50px;
   margin: 0;
+  text-align: center;
 }
 
 h2 {
   font-size: 30px;
-    margin: 0;
-
+  margin: 0;
+  text-align: center;
 }
 h3{
-  font-size: 20px;
-  margin: 0
-
+  font-size: 19px;
+  margin: 0;
+  text-align: center;
 }
-h4{font-size: }
+
 p ul ol li a{
   font-size: 18px;
-    margin: 0;
-
+  margin: 0px;
 }
 
 
-body {font-family: Nunito;}
+body {font-family: "Nunito";}
 
 body {background-color: #EDDCD2;
 }
