--- a/style.css
+++ b/style.css
@@ -1,6 +1,7 @@
 /*img rules */
 img {
   width: 300px;
+  padding: 10px;
 }
 
 .center-circle {
@@ -30,29 +31,35 @@ h3{
 
 p, ul, ol, li, a{
   font-size: 18px;
-  margin: 0px;
 }
+
 hr{
   width: 75%;
 }
 
 
-body {font-family: "Nunito";}
-
-body {background-color: #EDDCD2;
+body {
+  font-family: "Nunito"; 
+  background-color: #EDDCD2;
+  box-sizing: border-box;
 }
 
 
  header, footer {
    text-align: center;
    background: #CB997E;
+   margin: 10px;
+   padding: 1px;
 }  
 
-div{
+section, article {
   background: #DDBEA9;
   display: block;
   margin-left: auto;
   margin-right: auto;
   width: 75%;
+  padding: 7px;
 }
+
+  
 
