--- a/style.css
+++ b/style.css
@@ -61,5 +61,23 @@ section, article {
   padding: 7px;
 }
 
+/* unvisited link */
+a:link {
+  color: blue;
+}
+
+/* visited link */
+a:visited {
+  color: purple;
+}
+
+/* mouse over link */
+a:hover {
+  color: green;
+}
+
+/* selected link */
+a:active {
+  color: gray;
   
 
